update deco borders on shade before aligning tabs

BUG: 308633
FIXED-IN: 4.9.3